--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>資訊科內容</h2>
+									<h2>班級紀錄</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									這三年我們幾乎要一起生活，一起讀書，一起吃飯，一起玩耍，這三年一起做的所有事情，
+									將會永遠記錄在我們心中。
 								</p>
 								<section>
 									<div class="row">
