--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
+	<body style='font-family:fontss;' class="is-preload">
 
 		<!-- Wrapper-->
 			<div id="wrapper">
@@ -37,11 +37,7 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-<<<<<<< HEAD
 									<h2>班級紀錄</h2>
-=======
-									<h2>資訊科主要內容</h2>
->>>>>>> 12eb1ebb2eb5d78dd2c2ec74ebf59a16c6d06d34
 								</header>
 								<p>
 									這三年我們幾乎要一起生活，一起讀書，一起吃飯，一起玩耍，這三年一起做的所有事情，
