--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>資訊科主要內容</h2>
+									<h2>班級紀錄</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									這三年我們幾乎要一起生活，一起讀書，一起吃飯，一起玩耍，這三年一起做的所有事情，
+									將會永遠記錄在我們心中。
 								</p>
 								<section>
 									<div class="row">
@@ -87,33 +86,12 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="contact" class="panel">
+							<article id="intro" class="panel">
 								<header>
-									<h2>Contact Me</h2>
+									<h2>升學資訊</h2>
 								</header>
-								<form action="#" method="post">
-									<div>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-medium">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="6"></textarea>
-											</div>
-											<div class="col-12">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form>
+								<a href="https://www.techadmi.edu.tw/111new/apply/">111學年度四技二專甄選入學招生選才內涵</a>
 							</article>
-
 					</div>
 
 				<!-- Footer -->
