--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="intro" class="panel">
+							<article id="contact" class="panel">
 								<header>
 									<h2>升學資訊</h2>
 								</header>
