--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
 						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
-									<h2>升學資訊</h2>
+									<h2>相關資訊</h2>
 								</header>
+								<h2>升學資訊</h2>
 								<a href="https://www.techadmi.edu.tw/111new/apply/">111學年度四技二專甄選入學招生選才內涵</a>
 							</article>
 					</div>
