--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
+						<a href="#" class="icon solid fa-home"><span>主頁</span></a>
+						<a href="#work" class="icon solid fa-folder"><span>班級紀錄</span></a>
+						<a href="#contact" class="icon solid fa-envelope"><span>相關資訊</span></a>
+						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>IG</span></a>
 					</nav>
 
 				<!-- Main -->
