--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								</p>
 								<section>
 									<div class="row">
-										<h2>2019/</h2>
+										<h2>2019/09/16-17公民訓練</h2>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
 										</div>
