--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>主頁</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>班級紀錄</span></a>
+						<a href="#record" class="icon solid fa-folder"><span>班級紀錄</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>相關資訊</span></a>
 						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw" class="icon brands fa-twitter"><span>Instagram</span></a>
 					</nav>
