--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>主頁</span></a>
+						<a href="#home" class="icon solid fa-home"><span>主頁</span></a>
 						<a href="#record" class="icon solid fa-folder"><span>班級紀錄</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>相關資訊</span></a>
 						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw" class="icon brands fa-twitter"><span>Instagram</span></a>
@@ -22,20 +22,20 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Me -->
+						<!-- Home -->
 							<article id="home" class="panel intro">
 								<header>
 									<h1>資一智</h1>
 									<p>資訊科最有智慧的班級</p>
 								</header>
-								<a href="#work" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+								<a href="#record" class="jumplink pic">
+									<span class="arrow icon solid fa-chevron-right"><span>班級紀錄</span></span>
 									<img src="images/home.jpg" alt="" />
 								</a>
 							</article>
 
-						<!-- Work -->
-							<article id="work" class="panel">
+						<!-- Record -->
+							<article id="record" class="panel">
 								<header>
 									<h2>班級紀錄</h2>
 								</header>
