--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<nav id="nav">
 						<a href="#home" class="icon solid fa-home"><span>主頁</span></a>
 						<a href="#record" class="icon solid fa-folder"><span>班級紀錄</span></a>
-						<a href="#contact" class="icon solid fa-envelope"><span>相關資訊</span></a>
+						<a href="#intro" class="icon solid fa-envelope"><span>相關資訊</span></a>
 						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw" class="icon brands fa-twitter"><span>Instagram</span></a>
 					</nav>
 
@@ -86,8 +86,8 @@
 								</section>
 							</article>
 
-						<!-- Contact -->
-							<article id="contact" class="panel">
+						<!-- Intro -->
+							<article id="intro" class="panel">
 								<header>
 									<h2>相關資訊</h2>
 								</header>
