--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								</p>
 								<section>
 									<div class="row">
-										2019/09/16-17公民訓練<br>
+										<h3>2019/09/16-17公民訓練</h3>
 										<div class="col-4 col-6-medium col-12-small">
 											<img src="images/pic01.jpg" alt=""></a>
 										</div>
