--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									<div class="row">
 										<h3>2019/09/16-17公民訓練</h3>
 										<div class="pic">
-											<img src="images/20190917.jpg" width=540 height=360 alt="2019-09-17"></a>
+											<a href="https://drive.google.com/drive/u/0/folders/1i-bl_wEbLx7qspZ4RdlunpTLbU2C4qgk" title="公民訓練"><img src="images/20190917.jpg" width=540 height=360 alt="2019-09-17"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
