--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
 								<header>
 									<h2>相關資訊</h2>
 								</header>
+								<h3>學校網站</h3>
+								<a href="http://www.saihs.edu.tw/index.php">臺北市立松山高級工農職業學校</a>
+								<h4>科系網站</h4>
+								<a href="http://cweb.saihs.edu.tw/web/inf/">資訊科</a>
+								<a href="http://cweb.saihs.edu.tw/web/art/">藝能科</a>
+								<a href="http://cweb.saihs.edu.tw/web/phy/">體育科</a>
 								<h3>升學資訊</h3>
 								<a href="https://www.techadmi.edu.tw/111new/apply/">111學年度四技二專甄選入學招生選才內涵</a>
 							</article>
