--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								</header>
 								<h3>學校網站</h3>
 								<a href="http://www.saihs.edu.tw/index.php">臺北市立松山高級工農職業學校</a>
-								<h4>科系網站</h4>
+								<h4>各科網站</h4>
 								<a href="http://cweb.saihs.edu.tw/web/inf/">資訊科</a>
 								<a href="http://cweb.saihs.edu.tw/web/art/">藝能科</a>
 								<a href="http://cweb.saihs.edu.tw/web/phy/">體育科</a>
