--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								</header>
 								<a href="#record" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>班級紀錄</span></span>
-									<img src="images/home.jpg" alt="" />
+									<img src="images/home.jpg" alt="">
 								</a>
 							</article>
 
@@ -72,7 +72,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; 2019 SAIHS. All rights reserved</li>
 						</ul>
 					</div>
 
