--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 						<a href="#home" class="icon solid fa-home"><span>主頁</span></a>
 						<a href="#record" class="icon solid fa-folder"><span>班級紀錄</span></a>
 						<a href="#intro" class="icon solid fa-envelope"><span>相關資訊</span></a>
-						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw" class="icon brands fa-twitter"><span>Instagram</span></a>
+						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw" class="fab fa-instagram"><span>Instagram</span></a>
 					</nav>
 
 				<!-- Main -->
