--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 								</p>
 								<h3>2019/09/16-17公民訓練</h3>
 								<a href="https://drive.google.com/drive/u/0/folders/1i-bl_wEbLx7qspZ4RdlunpTLbU2C4qgk" title="公民訓練"><img src="images/20190917.jpg" width=300 height=200 alt="2019-09-17" onMouseOver="this.width=this.width*2.5;this.height=this.height*2.5" onMouseOut="this.width=this.width/2.5;this.height=this.height/2.5"></a>
+								<h3>2019/12/06資訊展參觀</h3>
 							</article>
 
 						<!-- Intro -->
