--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 						<a href="#home" class="icon solid fa-home"><span>主頁</span></a>
 						<a href="#form"><i class="fas fa-file"></i><span>課表</span></a>
 						<a href="#record" class="icon solid fa-folder"><span>班級紀錄</span></a>
+						<a href="#teacherintro" class="icon solid fa-folder"><span>班級紀錄</span></a>
 						<a href="#intro" class="icon solid fa-envelope"><span>相關資訊</span></a>
 						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram"></i><span>Instagram</span></a>
 					</nav>
@@ -118,6 +119,13 @@
 									</table>
 							</header>
 						
+						</article>
+
+						<!-- Teacherintro -->
+						<article id="teacherintro" class="panel intro">
+							<header>
+								<h2>教師介紹</h2>
+							</header>
 						</article>
 
 						<!-- Record -->
