--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<article id="form" class="panel">
 							<header>
 								<h2>課表</h2>
-								<table border="1">
+								<table border=1>
 										<tr>
 												<td></td>
 												<td>一</td>
