--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<header>
 								<h2>課表</h2>
 							</header>
-							<table border=1>
+							<table border='1'>
 								<tr>
 										<td></td>
 										<td>一</td>
@@ -49,7 +49,7 @@
 										<td>三</td>
 										<td>四</td>
 										<td>五</td>
-									 </tr>
+								</tr>
 							<tr>
 									<td>8:20~9:10</td>
 									<td>基電</td>
@@ -57,65 +57,64 @@
 									<td>英文</td>
 									<td>國文</td>
 									<td>歷史</td>
-								 </tr>
-								 <tr>
+								</tr>
+								<tr>
 										<td>9:20~10:10</td>
 										<td>國防</td>
 										<td>國文</td>
 										<td>英文</td>
 										<td>國文</td>
 										<td>歷史</td>
-									 </tr>
-								 <tr>
+								</tr>
+								<tr>
 										<td>10:20~11:10</td>
 										<td>數學</td>
 										<td>物理</td>
 										<td>美術</td>
 										<td>音樂</td>
 										<td>國文</td>
-									 </tr>
-									 <tr>
-											<td>11:20~12:10</td>
-											<td>體育</td>
-											<td>物理</td>
-											<td>美術</td>
-											<td>數學</td>
-											<td>英文</td>
-										 </tr>
-										 <tr>
-												<td>12:10~13:00</td>
-												<td>午休</td>
-												<td>午休</td>
-												<td>午休</td>
-												<td>午休</td>
-												<td>午休
-												</td>
-											 </tr>
-											 <tr>
-													<td>13:10~14:00</td>
-													<td>實習</td>
-													<td>數學</td>
-													<td>班會</td>
-													<td>輔導</td>
-													<td>實習</td>
-
-												 </tr>
-												 <tr>
-												<td>14:10~15:00</td>
-												<td>實習</td>
-												<td>數學</td>
-												<td>社團</td>
-												<td>基電</td>
-												<td>實習</td>
-											 </tr>
-											 <tr>
-													<td>15:10~16:00</td>
-													<td>實習</td>
-													<td>化學</td>
-													<td>社團</td>
-													<td>基電</td>
-													<td>實習</td>
-												 </tr>
+								</tr>
+								<tr>
+									<td>11:20~12:10</td>
+									<td>體育</td>
+									<td>物理</td>
+									<td>美術</td>
+									<td>數學</td>
+									<td>英文</td>
+								</tr>
+								<tr>
+									<td>12:10~13:00</td>
+									<td>午休</td>
+									<td>午休</td>
+									<td>午休</td>
+									<td>午休</td>
+									<td>午休
+									</td>
+								</tr>
+								<tr>
+									<td>13:10~14:00</td>
+									<td>實習</td>
+									<td>數學</td>
+									<td>班會</td>
+									<td>輔導</td>
+									<td>實習</td>
+								</tr>
+								<tr>
+									<td>14:10~15:00</td>
+									<td>實習</td>
+									<td>數學</td>
+									<td>社團</td>
+									<td>基電</td>
+									<td>實習</td>
+								</tr>
+								<tr>
+									<td>15:10~16:00</td>
+									<td>實習</td>
+									<td>化學</td>
+									<td>社團</td>
+									<td>基電</td>
+									<td>實習</td>
+								</tr>
 							</table>
 						</article>
 
