--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 							<header>
 								<h2>導師介紹</h2>
 							</header>
+							<img src="images/teach.png" alt="">
 						</article>
 
 						<!-- Record -->
