--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 						</article>
 
 						<!-- Teacherintro -->
-						<article id="teacherintro" class="panel intro">
+						<article id="teacherintro" class="panel">
 							<header>
 								<h2>導師介紹</h2>
 							</header>
