--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<header>
 								<h2>課表</h2>
 							</header>
-							<table border='1'>
+							<table border="1">
 								<tr>
 									<td></td>
 									<td>一</td>
@@ -50,7 +50,7 @@
 									<td>四</td>
 									<td>五</td>
 								</tr>
-							<tr>
+								<tr>
 									<td>8:20~9:10</td>
 									<td>基電</td>
 									<td>體育</td>
