--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 								<h2>班級紀錄</h2>
 							</header>
 							<p>
-								這三年我們幾乎要一起生活，一起讀書，一起吃飯，一起玩耍，這三年一起做的所有事情，
+								這三年我們幾乎要一起生活，一起讀書，一起挨罵，一起玩耍，這三年一起做的所有事情，
 								將會永遠記錄在我們心中。
 							</p>
 							<h3>2019/09/16-17公民訓練</h3>
