--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 						<a href="#teacherintro"><i class="fas fa-chalkboard-teacher"></i><span>導師介紹</span></a>
 						<a href="#record" class="icon solid fa-folder"><span>班級紀錄</span></a>
 						<a href="#intro" class="icon solid fa-envelope"><span>相關資訊</span></a>
-						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram"></i><span>Instagram</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -160,6 +159,10 @@
 								<a href="https://www.techadmi.edu.tw/111new/apply/">111學年度四技二專甄選入學招生選才內涵</a>
 							</article>
 					</div>
+
+					<nav id="nav">
+						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram"></i><span>Instagram</span></a>
+					</nav>
 
 				<!-- Footer -->
 					<div id="footer">
