--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 						<a href="#teacherintro"><i class="fas fa-chalkboard-teacher"></i><span>導師介紹</span></a>
 						<a href="#record" class="icon solid fa-folder"><span>班級紀錄</span></a>
 						<a href="#intro" class="icon solid fa-envelope"><span>相關資訊</span></a>
+						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram"></i><span>Instagram</span></a>
 					</nav>
 
 				<!-- Main -->
