--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 					</div>
 
 					<nav id="nav">
-						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram"></i><span>Instagram</span></a>
+						<a style="vertical-align:left;" href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram"></i><span>Instagram</span></a>
 					</nav>
 
 				<!-- Footer -->
