--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 								<header>
 									<h1>資一智</h1>
 									<p>資訊科最有智慧的班級</p>
+									<nav id="nav">
+										<a href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram"></i><span>Instagram</span></a>
+									</nav>
 								</header>
 								<a href="#record" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>班級紀錄</span></span>
@@ -159,10 +162,6 @@
 								<a href="https://www.techadmi.edu.tw/111new/apply/">111學年度四技二專甄選入學招生選才內涵</a>
 							</article>
 					</div>
-
-					<nav id="nav">
-						<a style="vertical-align:left;" href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram"></i><span>Instagram</span></a>
-					</nav>
 
 				<!-- Footer -->
 					<div id="footer">
