--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#home" class="icon solid fa-home"><span>主頁</span></a>
+						<a href="#news" class="icon solid fa-home"><span>最新消息</span></a>
 						<a href="#form"><i class="fas fa-file"></i><span>課表</span></a>
 						<a href="#teacherintro"><i class="fas fa-chalkboard-teacher"></i><span>導師介紹</span></a>
 						<a href="#record" class="icon solid fa-folder"><span>班級紀錄</span></a>
 						<a href="#intro" class="icon solid fa-envelope"><span>相關資訊</span></a>
+						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram"></i><span>Instagram</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -28,9 +30,6 @@
 								<header>
 									<h1>資一智</h1>
 									<p>資訊科最有智慧的班級</p>
-									<nav id="nav">
-										<a href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram"></i><span>Instagram</span></a>
-									</nav>
 								</header>
 								<a href="#record" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>班級紀錄</span></span>
@@ -38,6 +37,13 @@
 								</a>
 							</article>
 						
+						<!-- News -->
+						<article id="news" class="panel">
+							<header>
+								<h2>最新消息</h2>
+							</header>
+						</article>
+
 						<!-- Form -->
 						<article id="form" class="panel">
 							<header>
