--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#home" class="icon solid fa-home"><span>主頁</span></a>
-						<a href="#news" class="icon solid fa-home"><span>最新消息</span></a>
+						<a href="#news"><i class="fas fa-newspaper"></i><span>最新消息</span></a>
 						<a href="#form"><i class="fas fa-file"></i><span>課表</span></a>
 						<a href="#teacherintro"><i class="fas fa-chalkboard-teacher"></i><span>導師介紹</span></a>
 						<a href="#record" class="icon solid fa-folder"><span>班級紀錄</span></a>
