--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<ul>
+						<ul style="text-align:left;">
 							<li><a href="#home" class="icon solid fa-home"><span>主頁</span></a></li>
 							<li><a href="#news"><i class="fas fa-newspaper"></i><span>最新消息</span></a></li>
 							<li><a href="#form"><i class="fas fa-file"></i><span>課表</span></a></li>
