--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#home" class="icon solid fa-home"><span>主頁</span></a>
-						<a href="#news"><i class="fas fa-newspaper"></i><span>最新消息</span></a>
-						<a href="#form"><i class="fas fa-file"></i><span>課表</span></a>
-						<a href="#teacherintro"><i class="fas fa-chalkboard-teacher"></i><span>導師介紹</span></a>
-						<a href="#record" class="icon solid fa-folder"><span>班級紀錄</span></a>
-						<a href="#intro" class="icon solid fa-envelope"><span>相關資訊</span></a>
-						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram"></i><span>Instagram</span></a>
+						<a href="#home" class="icon solid fa-home" style="font-size:36px;"><span>主頁</span></a>
+						<a href="#news"><i class="fas fa-newspaper" style="font-size:36px;"></i><span>最新消息</span></a>
+						<a href="#form"><i class="fas fa-file" style="font-size:36px;"></i><span>課表</span></a>
+						<a href="#teacherintro"><i class="fas fa-chalkboard-teacher" style="font-size:36px;"></i><span>導師介紹</span></a>
+						<a href="#record" class="icon solid fa-folder" style="font-size:36px;"><span>班級紀錄</span></a>
+						<a href="#intro" class="icon solid fa-envelope" style="font-size:36px;"><span>相關資訊</span></a>
+						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram" style="font-size:36px;"></i><span>Instagram</span></a>
 					</nav>
 
 				<!-- Main -->
