--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 									<h1>資一智</h1>
 									<p>資訊科最有智慧的班級</p>
 								</header>
-								<a href="#record" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>班級紀錄</span></span>
+								<a href="#news" class="jumplink pic">
+									<span class="arrow icon solid fa-chevron-right"><span>最新消息</span></span>
 									<img src="images/home.jpg" alt="">
 								</a>
 							</article>
