--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 							<header>
 								<h2>最新消息</h2>
 							</header>
-							<p>暫無..</p>
+							<a href="#form" class="jumplink pic">
+									<span class="arrow icon solid fa-chevron-right"><span>課表</span></span>
+									<p>暫無..</p>
+								</a>
 						</article>
 
 						<!-- Form -->
