--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 						<a href="#teacherintro"><i class="fas fa-chalkboard-teacher" style="font-size:36px;"></i><span>導師介紹</span></a>
 						<a href="#record"><i class="fas fa-folder" style="font-size:36px;"></i><span>班級紀錄</span></a>
 						<a href="#intro"><i class="fas fa-envelope" style="font-size:36px;"></i><span>相關資訊</span></a>
-						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram" style="font-size:36px;"></i><span>Instagram</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -169,6 +168,9 @@
 								<a href="https://www.techadmi.edu.tw/111new/apply/">111學年度四技二專甄選入學招生選才內涵</a>
 							</article>
 					</div>
+					<nav id="nav">
+						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram" style="font-size:36px;"></i><span>Instagram</span></a>
+					</nav>
 
 				<!-- Footer -->
 					<div id="footer">
