--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 							</article>
 					</div>
 					<nav id="nav">
-						<p><font color="#deb6b0">Instagram</font></p>
+						<div><font color="#deb6b0">Instagram</font></div>
 						<a href="https://www.instagram.com/saihs8041/?hl=zh-tw"><i class="fab fa-instagram" style="font-size:36px;"></i><span>Instagram</span></a>
 					</nav>
 
