--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 								<a href="http://cweb.saihs.edu.tw/web/phy/">體育科</a>
 								<h3>升學資訊</h3>
 								<a href="https://www.techadmi.edu.tw/111new/apply/">111學年度四技二專甄選入學招生選才內涵</a>
+                                                                <a href="https://www.unews.com.tw/">大學問</a>
 							</article>
 					</div>
 					<nav id="nav">
