--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 						<!-- Home -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>資一智</h1>
-									<p>資訊科最有智慧的班級</p>
+									<h1>資二智</h1>
+									<p>資訊科最爛的班級</p>
 								</header>
 								<a href="#news" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>最新消息</span></span>
