--- a/index.html
+++ b/index.html
@@ -60,35 +60,35 @@
 								</tr>
 								<tr>
 									<td>8:20~9:10</td>
-									<td>基電</td>
-									<td>體育</td>
+									<td>數邏</td>
 									<td>英文</td>
-									<td>國文</td>
-									<td>歷史</td>
+									<td>電子學</td>
+									<td>電子學</td>
+									<td>數邏</td>
 								</tr>
 								<tr>
 									<td>9:20~10:10</td>
-									<td>國防</td>
-									<td>國文</td>
 									<td>英文</td>
-									<td>國文</td>
-									<td>歷史</td>
+									<td>英文</td>
+									<td>電子學實習</td>
+									<td>電子學</td>
+									<td>數邏</td>
 								</tr>
 								<tr>
 									<td>10:20~11:10</td>
+									<td>健康</td>
 									<td>數學</td>
-									<td>物理</td>
-									<td>美術</td>
-									<td>音樂</td>
-									<td>國文</td>
+									<td>電子學實習</td>
+									<td>體育</td>
+									<td>英文</td>
 								</tr>
 								<tr>
 									<td>11:20~12:10</td>
-									<td>體育</td>
-									<td>物理</td>
-									<td>美術</td>
+									<td>國文</td>
 									<td>數學</td>
-									<td>英文</td>
+									<td>電子學實習</td>
+									<td>數學</td>
+									<td>班會</td>
 								</tr>
 								<tr>
 									<td>12:10~13:00</td>
@@ -101,27 +101,27 @@
 								</tr>
 								<tr>
 									<td>13:10~14:00</td>
-									<td>實習</td>
-									<td>數學</td>
-									<td>班會</td>
-									<td>輔導</td>
-									<td>實習</td>
+									<td>國文</td>
+									<td>可程式實習</td>
+									<td>國文</td>
+									<td>軟體實習</td>
+									<td>選修</td>
 								</tr>
 								<tr>
 									<td>14:10~15:00</td>
-									<td>實習</td>
 									<td>數學</td>
-									<td>社團</td>
-									<td>基電</td>
-									<td>實習</td>
+									<td>可程式實習</td>
+									<td>國文</td>
+									<td>軟體實習</td>
+									<td>選修/社團</td>
 								</tr>
 								<tr>
 									<td>15:10~16:00</td>
-									<td>實習</td>
-									<td>化學</td>
-									<td>社團</td>
-									<td>基電</td>
-									<td>實習</td>
+									<td>電子學</td>
+									<td>可程式實習</td>
+									<td>體育</td>
+									<td>軟體實習</td>
+									<td>選修/社團</td>
 								</tr>
 							</table>
 						</article>
