--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<header>
 								<h2>課表</h2>
 							</header>
-							<table border="1">
+							<table border="1" align="center">
 								<tr>
 									<td></td>
 									<td>一</td>
