--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 							<header>
 								<h2>課表</h2>
 							</header>
-							<table border="1" align="center">
-								<tr>
+							<table border="1">
+								<tr align="center">
 									<td></td>
 									<td>一</td>
 									<td>二</td>
@@ -58,7 +58,7 @@
 									<td>四</td>
 									<td>五</td>
 								</tr>
-								<tr>
+								<tr align="center">
 									<td>8:20~9:10</td>
 									<td>數邏</td>
 									<td>英文</td>
@@ -66,7 +66,7 @@
 									<td>電子學</td>
 									<td>數邏</td>
 								</tr>
-								<tr>
+								<tr align="center">
 									<td>9:20~10:10</td>
 									<td>英文</td>
 									<td>英文</td>
@@ -74,7 +74,7 @@
 									<td>電子學</td>
 									<td>數邏</td>
 								</tr>
-								<tr>
+								<tr align="center">
 									<td>10:20~11:10</td>
 									<td>健康</td>
 									<td>數學</td>
@@ -82,7 +82,7 @@
 									<td>體育</td>
 									<td>英文</td>
 								</tr>
-								<tr>
+								<tr align="center">
 									<td>11:20~12:10</td>
 									<td>國文</td>
 									<td>數學</td>
@@ -90,7 +90,7 @@
 									<td>數學</td>
 									<td>班會</td>
 								</tr>
-								<tr>
+								<tr align="center">
 									<td>12:10~13:00</td>
 									<td>午休</td>
 									<td>午休</td>
@@ -99,7 +99,7 @@
 									<td>午休
 									</td>
 								</tr>
-								<tr>
+								<tr align="center">
 									<td>13:10~14:00</td>
 									<td>國文</td>
 									<td>可程式實習</td>
@@ -107,7 +107,7 @@
 									<td>軟體實習</td>
 									<td>選修</td>
 								</tr>
-								<tr>
+								<tr align="center">
 									<td>14:10~15:00</td>
 									<td>數學</td>
 									<td>可程式實習</td>
@@ -115,7 +115,7 @@
 									<td>軟體實習</td>
 									<td>選修/社團</td>
 								</tr>
-								<tr>
+								<tr align="center">
 									<td>15:10~16:00</td>
 									<td>電子學</td>
 									<td>可程式實習</td>
