--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 							</header>
 							<img src="images/teach.png" alt="">
 							<h3>龔萬懋</h3>
-							<h3>資一智導師</h3>
+							<h3>資二智導師</h3>
 							<h3>電子郵件：gong@saihs.edu.tw</h3>
 							<h3>手機：0958-671-878</h3>
 							<h3>科辦：(02)2722-6616 #241</h3>
